--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,52 @@ body {
 .address-wrapper > a:focus {
     color: var(--primary-color);
 }
+
+/*stylowanie flexem H03*/
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    outline: 1px dashed red;
+}
+
+/*nagłówek*/
+.site-nav {
+    border-bottom: 1px solid #ececec;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    height: 80px;
+    left: 0px;
+    top: 5px;
+    border-radius: 0px;
+}
+
+.flex-nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex-nav-child1 {
+    display: flex;
+    align-items: center;
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin-left: 93px;
+}
+.nav-links li {
+    margin: 0 46px;
+}
+.contact-links{
+    display: flex;
+    list-style: none;
+    gap:50px;
+}
+
+.flex-hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
