--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,12 @@ body {
     cursor: pointer;
 }
 
+.articles{
+    list-style: none;
+    display:flex;
+       
+}
+
 .articles > li > h3 {
     font-weight: 700;
     font-size: 14px;
@@ -248,4 +254,22 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height:600px;
+}
+
+h1{
+    
+
+}
+
+.flex-3{
+    list-style: none;
+    display:flex;
+
+}
+
+.flex-4{
+list-style: none;
+    display:flex;
 }
