--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ body {
 .articles{
     list-style: none;
     display:flex;
+    
 
        
 }
@@ -277,10 +278,15 @@ h1{
 .flex-3{
     list-style: none;
     display:flex;
+    justify-content: center;
+    gap:30px;
+
 
 }
 
 .flex-4{
 list-style: none;
     display:flex;
+    justify-content: center;
+    gap:30px;
 }
